# The-Complete-RAG-Bootcamp

./: 01_Data_Ingestion.ipynb  02_Data_Parsing_PDF.ipynb  03_Data_Parsing_Doc.ipynb  04_Data_Parsing_csv_and_excel.ipynb  05_Data_Parsing_Databases.ipynb  06_Simple_RAG_pipeline.ipynb  08_Semantic_Chunking.ipynb  09_Hybrid_RAG.ipynb  10_Agentic_RAG.ipynb  README.md  main.py  pyproject.toml  requirements.txt
